tests/baselines/reference/fatarrowfunctionsOptionalArgsErrors2.errors.txt
==== tests/cases/compiler/fatarrowfunctionsOptionalArgsErrors2.ts (17 errors) ====
    var tt1 = (a, (b, c)) => a+b+c;
                          ~~
!!! error TS1005: ';' expected.
               ~
!!! error TS2095: Could not find symbol 'a'.
                   ~
!!! error TS2095: Could not find symbol 'b'.
                      ~
!!! error TS2095: Could not find symbol 'c'.
                             ~
!!! error TS2095: Could not find symbol 'a'.
                               ~
!!! error TS2095: Could not find symbol 'b'.
                                 ~
!!! error TS2095: Could not find symbol 'c'.
    var tt2 = ((a), b, c) => a+b+c;
                          ~~
!!! error TS1005: ';' expected.
                ~
!!! error TS2095: Could not find symbol 'a'.
                    ~
!!! error TS2095: Could not find symbol 'b'.
                       ~
!!! error TS2095: Could not find symbol 'c'.
                             ~
!!! error TS2095: Could not find symbol 'a'.
                               ~
!!! error TS2095: Could not find symbol 'b'.
                                 ~
!!! error TS2095: Could not find symbol 'c'.
    
    var tt3 = ((a)) => a;
                    ~~
!!! error TS1005: ';' expected.
                ~
!!! error TS2095: Could not find symbol 'a'.
                       ~
!!! error TS2095: Could not find symbol 'a'.